// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegistrationConfirmation renders a continue reading button when an articleUrl is provided 1`] = `
<div class="ncf">
  <div class="ncf__center ncf__margin">
    <div class="ncf__icon ncf__icon--tick ncf__icon--large">
    </div>
    <h1 class="ncf__header ncf__header--confirmation">
      Success
    </h1>
    <p class="ncf_confirmation--message">
      Thank you for registering for FT Edit.
    </p>
    <p class="ncf__confirmation--message margin-top-x4 ">
      Enjoy 30 days of great journalism. We’ve sent confirmation to
      <div>
        <strong>
          test@example.com
        </strong>
        .
      </div>
    </p>
  </div>
  <a href="/"
     target="_parent"
     class=" ncf__confirmation--finish ncf__button ncf__button--submit"
     data-trackable="register-finish-head-to-ft-edit-hub"
  >
    Explore FT Edit
  </a>
  <a href="https://www.ft.com/content/9141eee7-825a-41d7-913d-49e8c12e76db"
     target="_parent"
     class=" ncf__confirmation--finish-article-read ncf__button ncf__button--secondary reduce-bottom-spacing"
     data-trackable="register-finish-head-to-article"
  >
    Continue reading
  </a>
</div>
`;

exports[`RegistrationConfirmation renders an explore hub button always 1`] = `
<div class="ncf">
  <div class="ncf__center ncf__margin">
    <div class="ncf__icon ncf__icon--tick ncf__icon--large">
    </div>
    <h1 class="ncf__header ncf__header--confirmation">
      Success
    </h1>
    <p class="ncf_confirmation--message">
      Thank you for registering for FT Edit.
    </p>
    <p class="ncf__confirmation--message margin-top-x4 ">
      Enjoy 30 days of great journalism. We’ve sent confirmation to
      <div>
        <strong>
          test@example.com
        </strong>
        .
      </div>
    </p>
  </div>
  <a href="http://thing-hub"
     target="_parent"
     class=" ncf__confirmation--finish ncf__button ncf__button--submit"
     data-trackable="register-finish-head-to-ft-edit-hub"
  >
    Explore FT Edit
  </a>
</div>
`;

exports[`RegistrationConfirmation renders with a custom email 1`] = `
<div class="ncf">
  <div class="ncf__center ncf__margin">
    <div class="ncf__icon ncf__icon--tick ncf__icon--large">
    </div>
    <h1 class="ncf__header ncf__header--confirmation">
      Success
    </h1>
    <p class="ncf_confirmation--message">
      Thank you for registering for FT Edit.
    </p>
    <p class="ncf__confirmation--message margin-top-x4 ">
      Enjoy 30 days of great journalism. We’ve sent confirmation to
      <div>
        <strong>
          test@example.com
        </strong>
        .
      </div>
    </p>
  </div>
  <a href="/"
     target="_parent"
     class=" ncf__confirmation--finish ncf__button ncf__button--submit"
     data-trackable="register-finish-head-to-ft-edit-hub"
  >
    Explore FT Edit
  </a>
</div>
`;

exports[`RegistrationConfirmation renders with default props 1`] = `
<div class="ncf">
  <div class="ncf__center ncf__margin">
    <div class="ncf__icon ncf__icon--tick ncf__icon--large">
    </div>
    <h1 class="ncf__header ncf__header--confirmation">
      Success
    </h1>
    <p class="ncf_confirmation--message">
      Thank you for registering for FT Edit.
    </p>
    <p class="ncf__confirmation--message margin-top-x4 ">
      Enjoy 30 days of great journalism. We’ve sent confirmation to
      <div>
        <strong>
          bob@gmail.com
        </strong>
        .
      </div>
    </p>
  </div>
  <a href="/"
     target="_parent"
     class=" ncf__confirmation--finish ncf__button ncf__button--submit"
     data-trackable="register-finish-head-to-ft-edit-hub"
  >
    Explore FT Edit
  </a>
</div>
`;
